<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/fourthTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/results_details" />

    <LinearLayout
        android:id="@+id/Buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">
        <Button
            android:id="@+id/export"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/export"
            android:onClick="onClickExport"
            android:textSize="14sp" />

        <Button
            android:id="@+id/replay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/replay"
            android:onClick="onClickReplay"
            android:textSize="14sp"
            android:layout_marginLeft="50px"/>

        <Button
            android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quitter"
            android:onClick="onClickExit"
            android:textSize="14sp"
            android:layout_marginLeft="50px" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/Trials"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/Buttons"
        android:layout_below="@+id/fourthTextView" />

</RelativeLayout>