<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/ISC"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/basic_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/basic_mode" />

        <Button
            android:id="@+id/captor_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/captor_mode" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>